docs/7.52/md/abenabap_data_string.md
---
title: "Character String and Byte String Processing"
description: |
  This section describes the language elements, expressions, and functions used for the processing of character strings(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencharacter_string_1_glosry.htm 'Glossary Entry') and byte strings(https://help.sap.com/doc/abapdocu_752_index_htm/7.
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_string.htm"
abapFile: "abenabap_data_string.htm"
keywords: ["do", "try", "class", "data", "types", "abenabap", "string"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) → 

Character String and Byte String Processing

This section describes the language elements, expressions, and functions used for the processing of [character strings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencharacter_string_1_glosry.htm "Glossary Entry") and [byte strings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbyte_chain_glosry.htm "Glossary Entry") in character-like and byte-like data objects.

-   [Character String and Byte String Processing - Overview](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_oview.htm)

-   [Statements for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_statements.htm)

-   [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_expr_func.htm)

-   [Expressions and Functions for Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbyte_processing_expr_func.htm)

-   [System Classes for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_string_utilities.htm)

Special relational operators and predicate functions are also available for character strings and byte strings:

-   [Relational Operators for Character-Like Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogexp_strings.htm)

-   [Relational Operators for Byte-Like Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogexp_bytes.htm)

-   [Predicate Functions for Character-Like Arguments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpredicate_functions_strgs.htm)

Continue
[Character and Byte String Processing - Overview](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_oview.htm)
[Statements for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_statements.htm)
[Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_expr_func.htm)
[Expressions and Functions for Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbyte_processing_expr_func.htm)
[System Classes for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_string_utilities.htm)