docs/7.57/md/abenabap_data_string.md
---
title: "Character String and Byte String Processing"
description: |
  This section describes the language elements, expressions, and functions designed especially for the processing of character strings(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencharacter_string_glosry.htm 'Glossary Entry') and byte strings(https://help.sap.com/doc/abapdocu_757
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_string.htm"
abapFile: "abenabap_data_string.htm"
keywords: ["do", "if", "try", "class", "data", "types", "abenabap", "string"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Character String and Byte String Processing, ABENABAP_DATA_STRING, 757%0D%0A%0D%0AErr
or:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Character String and Byte String Processing

This section describes the language elements, expressions, and functions designed especially for the processing of [character strings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencharacter_string_glosry.htm "Glossary Entry") and [byte strings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbyte_chain_glosry.htm "Glossary Entry") in character-like and byte-like data objects.

-   [Character String and Byte String Processing - Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_oview.htm)
-   [Statements for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_statements.htm)
-   [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_expr_func.htm)
-   [Expressions and Functions for Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbyte_processing_expr_func.htm)
-   [System Classes for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_string_utilities.htm)

In addition, there are special comparison operators and predicate functions for character strings and byte strings:

-   [Comparison Operators for Character-Like Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlogexp_strings.htm)
-   [Comparison Operators for Byte-Like Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlogexp_bytes.htm)
-   [Predicate Functions for Character-Like Arguments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpredicate_functions_strgs.htm)

Continue
[Character String and Byte String Processing, Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_oview.htm)
[Statements for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_statements.htm)
[Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_expr_func.htm)
[Expressions and Functions for Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbyte_processing_expr_func.htm)
[System Classes for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_string_utilities.htm)